fixed spacing

--- a/front-end/src/Contacts.css
+++ b/front-end/src/Contacts.css
@@ -7,7 +7,7 @@
 .contacts-grid {
     display: grid;
     grid-template-columns: repeat(4, minmax(250px, 1fr));
-    gap: 55px;
+    gap: 50px;
     justify-items: center;
     padding: 20px 0;
 }
